[package]
name = "ncmpwn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
aes = "0.8.3"
base64 = "0.21.2"
thiserror = "1.0.43"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
audiotags = { version = "0.4.1", optional = true }
id3 = { version = "1.1.0", optional = true }
metaflac = { version = "0.2.5", optional = true }
image = { version = "0.24.6", optional = true }

clap = { version = "4.3.12", features = ["derive"], optional = true }
do-notation = { version = "0.1.3", optional = true }
log = { version = "0.4.19", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }

[features]
default = ["tag"]
tag = ["dep:audiotags", "dep:id3", "dep:metaflac", "dep:image"]
cli = ["dep:clap", "dep:do-notation"]
log = ["dep:log", "dep:pretty_env_logger"]

[[bin]]
name = "ncmpwn"
required-features = ["cli", "tag", "log"]
