[package]
name = "ncmpwn-yew"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.1"
gloo-file = "0.2.3"
js-sys = "0.3.64"
log = "0.4.19"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }

image = "0.24.6"

ncmpwn = { path = "../" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
material-yew = { version = "0.3.0", features = ["full"] }
do-notation = "0.1.3"
base64 = "0.21.2"
